# esp32-gh-dashboard

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  partitions_cyd.csv  partitions_cyd28s3.csv  repo_config.csv  sdkconfig.cyd28  sdkconfig.cyd28s3  sdkconfig.cyd35  sdkconfig.defaults  sdkconfig.wvshr200
components/nordesems__esp-captive-portal/: .component_hash  CMakeLists.txt  Kconfig  LICENSE  README.md  captive_portal.c
components/nordesems__esp-captive-portal/include/: captive_portal.h
components/wifi_prov/: CMakeLists.txt  wifi_prov.c  wifi_prov.h
main/: CMakeLists.txt  Kconfig.projbuild  board_cyd28_ili9341_touch.c  board_cyd28s3_ili9341_touch.c  board_cyd35_st7796_touch.c  board_defaults.c  board_interface.h  board_waveshare_wvshr_p4_720_touch.c  board_wvshr200_st7789_touch.c  dashboard.c  dashboard.h  font8x16.h  github_api.c  github_api.h  idf_component.cyd28.yml  idf_component.cyd28s3.yml  idf_component.cyd35.yml  idf_component.p4.yml  idf_component.wvshr200.yml  idf_component.yml  layout_cyd.c  layout_cyd.h  main.c  traffic_csv.c  traffic_csv.h
sim/: CMakeLists.txt  board_sim.c  layout_editor.c  layout_editor.h  main_sim.c
